fixed username and height scrollbar issue

--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
 body,html,#container{
     margin:1%;
     background-color: #E6E6E6;
-    height:98%;
-    width:98%;
+    height:95%;
+    width:97%;
     font-family:'Poiret One', cursive;
 }
 .user{
